# daily-scrapper

./: .gitignore  README.md  main.py  pyproject.toml
core/: data_manager.py  db_manager.py  law_scraper.py  network.py  news_scraper.py  policy_scraper.py  signals.py  startup_manager.py  style.py  tw_utils.py  worker.py
ui/: components.py  dashboard_tab.py  help_dialog.py  law_tab.py  main_window.py  news_tab.py  policy_tab.py  roadmap_tab.py  schedule_tab.py
